openshift/projects/puppet5/node1-deployment.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: node1
  namespace: myproject
  labels:
    app: node1
spec:
  replicas: 1
  selector:
    deploymentconfig: node1
    #  strategy:
    #    type: Rolling
    #    rollingParams:
  template:
    metadata:
      labels:
        app: node1
        deploymentconfig: node1
    spec:
      containers:
        - name: node1
          image: docker.io/eneuhauss/project_puppet5_node1:1.2
