openshift/projects/puppet5/puppet-deployment.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: puppet
  namespace: myproject
  labels:
    app: puppet
spec:
  replicas: 2
  selector:
    deploymentconfig: puppet
    #  strategy:
    #    type: Rolling
    #    rollingParams:
  template:
    metadata:
      labels:
        app: puppet
        deploymentconfig: puppet
    spec:
      containers:
        - name: puppet
          image: docker.io/eneuhauss/project_puppet5_puppetmaster:1.2
          #          volumeMounts:
          #          - name: puppet-storage
          #            mountPath: /data/puppet
          ports:
          - containerPort: 8140
            protocol: TCP
            #  triggers:
            #  - type: ConfigChange
            #      volumes:
            #      - name: puppet-storage
            #        local:
            #          path: /Users/eneuhauss/git/studies/puppet/code
