openshift/projects/puppet5/puppet-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: puppet
  namespace: myproject
  labels:
    app: puppet
spec:
  ports:
    - port: 8140
      targetPort: 8140
  selector:
    deplomentconfig: puppet
