openshift/projects/puppet5/oc-create-app-puppet5.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: puppet
  name: puppet
spec:
  replicas: 1
  selector:
    app: puppet
    deploymentconfig: puppet
  strategy:
    resources: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: puppet
        deploymentconfig: puppet
    spec:
      containers:
      - image: 172.30.1.1:5000/myproject/puppet:latest
        name: puppet
        ports:
        - containerPort: 8140
          protocol: TCP
        resources: {}
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - puppet
      from:
        kind: ImageStreamTag
        name: puppet:latest
        namespace: myproject
    type: ImageChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: puppet
  name: puppet
spec:
  ports:
  - name: 8140-tcp
    port: 8140
    protocol: TCP
    targetPort: 8140
  selector:
    app: puppet
    deploymentconfig: puppet
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Route
metadata:
  name: puppet
  namespace: myproject
spec:
  host: puppet-myproject.192.168.99.100.xip.io
  to:
    kind: Service
    name: puppet
  port:
    targetPort: 8140-tcp
  wildcardPolicy: None
